# codesql

./: Cargo.toml  LICENSE  README-ja.md  README.md
scripts/: benchmark.sh
src/: analyzer.rs  catalog.rs  catalog_types.rs  cli.rs  config.rs  constants.rs  git.rs  lib.rs  main.rs  paths.rs  query.rs  segment.rs  state.rs  verifier.rs
src/commands/: init.rs  mod.rs  optimize.rs  save.rs  search.rs
src/indexing/: compaction.rs  diff.rs  materialize.rs  mod.rs  scan.rs  segment.rs
src/indexing/segment/: tests.rs
tests/: init_command.rs  optimize_command.rs  save_command.rs  search_command.rs
tests/support/: mod.rs
tmp_test/.codesql/: catalog.db  config.toml
tmp_test/.codesql/analyzers/: manifest.json
tmp_test/.codesql/segments/: 000001.seg
tmp_test/.codesql/state/: save_state.json
