[package]
name = "codesql"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "=1.3.3"
clap = { version = "4.5.38", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4.23"
rayon = "1.10.0"
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled", "functions"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlparser = "0.61.0"
tempfile = "3.20.0"
toml = "1.1.0+spec-1.1.0"
